# IPIN-Examples

./: .editorconfig  .flake8  .gitignore  .pylintrc  CHAPTER_2_MAPPING_SUMMARY.md  CHAPTER_3_IMPLEMENTATION_SUMMARY.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  FIX_SUMMARY_CH6.md  IMPLEMENTATION_SUMMARY.md  PHASE0_DELIVERED.md  PHASE1_COMPLETED.md  PHASE1_FINAL_SUMMARY.md  PHASE2_COMPLETION_REPORT.md  PHASE2_FINAL_SUMMARY.md  PHASE3_COMPLETION_REPORT.md  PHASE4_COMPLETION_REPORT.md  PHASE5_COMPLETION_REPORT.md  PHASE6_COMPLETION_REPORT.md  PHASE7_COMPLETION_REPORT.md  README.md  REORGANIZATION_SUMMARY.md  SETUP.md  TESTING_PLAN.md  TESTING_SUMMARY_REPORT.md  pyproject.toml
.dev/: CRITICAL_FIX_VERIFIED.txt  PROMPT6_COMPLETE.txt  PROMPT7_STATUS.txt  PROMPT8_STATUS.txt  README.md  ch2_development.md  ch3_development.md  ch3_implementation_summary.md  ch4_development.md  ch5_development.md  ch5_equation_fix_summary.md  ch5_missing_ap_support_summary.md  ch5_multisamples_implementation_summary.md  ch5_topk_posterior_mean_summary.md  ch6_allan_eq_analysis.md  ch6_development.md  ch6_eq611_analysis.md  ch6_eq67_notation_analysis.md  ch6_eq68_gravity_implementation_summary.md  ch6_pink_noise_bi_fix_summary.md  ch6_prompt1_state_ordering_summary.md  ch6_prompt2_eq67_notation_summary.md  ch6_prompt3_wheel_eq611_summary.md  ch6_prompt4_allan_equations_summary.md  ch6_prompt5_pdr_peak_detection_summary.md  ch6_prompt6_zaru_placeholder_summary.md  ch6_prompt7_pytest_collection_fix_summary.md  ch6_readme_updates_summary.md  ch6_verify_acceptance_criteria.py  ch6_verify_magnetometer_acceptance.py  ch6_verify_pdr_peak_detection_acceptance.py  ch6_verify_prompt1_state_ordering.py  ch6_verify_prompt2_eq67_notation.py  ch6_verify_prompt3_wheel_eq611.py  ch6_verify_prompt4_allan_equations.py  ch6_verify_prompt5_pdr_peak_detection.py  ch6_verify_prompt6_zaru_placeholder.py  ch6_verify_units_acceptance.py  ch6_verify_zupt_acceptance.py  ch6_verify_zupt_ekf_acceptance.py  (+35 more)
.github/: copilot-instructions.md
.templates/: PHASE0_COMPLETION.md  QUICK_START.md  parameter_effects_table_template.md
Chapter_3/: AOA_Positioning_Example.m  Example_data.mat  Example_data_simulation.m  TDOA_Positioning_Example.m  TOA_Positioning_Example.m
Chapter_6/: knn_rssi_positioning.m
Chapter_7/: Code_Chapter_7.m
ch2_coords/: README.md  __init__.py  example_attitude_visualization.py  example_coordinate_transforms.py
ch3_estimators/: BUGFIX_SUMMARY.md  ESTIMATOR_SELECTION_GUIDE.md  README.md  __init__.py  example_comparison.py  example_ekf_range_bearing.py  example_iekf_range_bearing.py  example_kalman_1d.py  example_least_squares.py  example_particle_bimodal.py
ch4_rf_point_positioning/: README.md  __init__.py  example_aoa_positioning.py  example_comparison.py  example_dop_geometry.py  example_tdoa_positioning.py  example_toa_positioning.py
ch5_fingerprinting/: README.md  SUMMARY.md  __init__.py  example_classification.py  example_comparison.py  example_deterministic.py  example_pattern_recognition.py  example_probabilistic.py  example_walk_posterior.py
ch6_dead_reckoning/: README.md  SUMMARY.md  __init__.py  example_allan_variance.py  example_comparison.py  example_environment.py  example_imu_strapdown.py  example_pdr.py  example_wheel_odometry.py  example_zupt.py
ch7_slam/: QUICK_START.md  README.md  __init__.py  example_bundle_adjustment.py  example_pose_graph_slam.py  example_scan_matching_visualization.py  (+2 more)
(+409 files in other folders)
